# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  Makefile  README.md  frontend-changes.md  pyproject.toml
.claude/commands/: implement-feature.md
.github/scripts/: ai-review.sh
.github/workflows/: custom-pr-review.yml
backend/: ai_generator.py  app.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_api.py
frontend/: index.html  script.js  style.css
tests/: test_ai_generator.py  test_integration.py  test_rag_system.py  test_vector_store.py
